Fix visual misalignment with smaller screen sizes

--- a/css/index.css
+++ b/css/index.css
@@ -154,3 +154,21 @@ h1, h2, #pomodoroTimerText, p {
     right: -10px;
   }
 }
+
+@media (max-width: 300px) {
+  .container {
+    width: 90%;
+    font-size: 1em;
+  }
+
+  header h1 {
+    font-size: 1.3em;
+  }
+
+  .pomodoroTimers {
+    height: 150px;
+  }
+  .middleTimer .timerText {
+    font-size: 2.4em;
+  }
+}
